src/test/ui/trivial-bounds/trivial-bounds-leak-copy.stderr
error[E0507]: cannot move out of `*t` which is behind a shared reference
  --> $DIR/trivial-bounds-leak-copy.rs:9:5
   |
LL |     *t
   |     ^^ move occurs because `*t` has type `std::string::String`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
